tests/baselines/reference/parserMemberAccessorDeclaration11.errors.txt
tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration11.ts(2,5): error TS1031: 'declare' modifier cannot appear on a class element.


==== tests/cases/conformance/parser/ecmascript5/MemberAccessorDeclarations/parserMemberAccessorDeclaration11.ts (1 errors) ====
    class C {
        declare get Foo() { }
        ~~~~~~~
!!! error TS1031: 'declare' modifier cannot appear on a class element.
    }